# lip_sync

./: .gitignore  README.md  pyproject.toml
SadTalker/: inference.py
lip_sync/: lipsync.py
