[tool.poetry]
name = "lip-sync"
version = "0.1.0"
description = ""
authors = ["Nada-Kamali <nada.kamali@avaxia-group.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
numpy = "1.23.4"
gfpgan = "^1.3.8"
face-alignment = "1.3.5"
imageio = "2.19.3"
imageio-ffmpeg = "0.4.7"
librosa = "0.9.2"
numba = "0.56.4"
resampy = "0.3.1"
pydub = "0.25.1"
scipy = "1.10.1"
kornia = "0.6.8"
tqdm = "^4.67.1"
yacs = "0.1.8"
pyyaml = "^6.0.2"
joblib = "1.1.0"
scikit-image = "0.19.3"
facexlib = "0.3.0"
gradio = "^5.22.0"
av = "^14.2.0"
safetensors = "^0.5.3"
basicsr-fixed = "^1.4.2"
torch = "^2.6.0"
torchvision = "^0.21.0"
torchaudio = "^2.6.0"
ffmpeg = "^1.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
